# VMT

./: .gitignore  .mdformat.toml  LINT_REPORT.md  Makefile  README.md  pyproject.toml  visual_test_simple.py
.cursor/rules/: vmtcursor.mdc
.github/: copilot-instructions.md
MANUAL_TESTS/: config_presets.json
llm_counter/: IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  MAKEFILE_UPDATE_SUMMARY.md  README.md  token_counter.py  vmt_token_report_20251007_213631.md  vmt_token_report_20251009_132402.md  vmt_token_report_20251009_172301.md
src/: __init__.py
src/econsim/: __init__.py  main.py
tests/: conftest.py
tests/integration/: __init__.py  test_unified_decision_basic.py  test_unified_decision_integration_v2.py
tests/performance/: baseline_capture.py
tests/unit/: test_agent.py  test_agent_v2.py  test_competition.py  test_coordinator.py  test_density_grid.py  test_executor_v2.py  test_respawn_type_diversity.py  test_step_decomposition_parity.py  test_trade_economic_coherence.py  test_unified_decision_logic.py  test_utility_functions.py
tmp_plans/CRITICAL/: DEBUG_RECORDING_ARCHITECTURE.md  gem_implement.md  gpt5high.md  opus.md
tmp_plans/FINAL/: EDUCATIONAL_SCENARIOS_REFACTOR.md  MODELING_DOCUMENTATION_STRUCTURE.md  Opus_econ_model_review.md  Spatial_Economic_Theory_Framework.md
tmp_plans/MODELS/: 1_single_agent_utility_spatial.md  REVIEW_critical_gaps.md  bilateral_pure_exchange.md  first_thoughts.md  llm_assist.md  opus.md  single_agent_utility_spatial.md
tmp_plans/REVIEWS/: gemini_econ_model_review.md  gpt5high_econ_model_review.md  sonnet45_followup.md
tmp_plans/TODOS/: DEBUG_RECORDING_ARCHITECTURE_PATCH_V1.md  ECONOMIC_MODEL_IMPLEMENTATION_PLAN.md
tmp_plans/ai_deep_research/: gemini.md
tmp_plans/archived/: 1_single_agent_utility_spatial.md  3_bilateral_forage_exchange.md  REFACTOR_PROJECT_STRUCTURE.md  (+3 more)
(+68 files in other folders)
